src/test/deca/syntax/invalid/parser/with_object/method_name.deca
class A { a 0a (){} }
